--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 Version 1.1.1 []
     - Important files check
-    - 
+    - Frontend scan option
 Version 1.0.1 [09-05-2019]
     - No Javascript Warning added
     - Auto create lab directory if not exist
