--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
-Version 1.0.4 []
+Version 1.0.4 [14-05-2020]
     - Fixed an error where local firefox extensions could not be detected (issue #9)
     - Added support for Brave browser
+    - Fixed some CSRF issues
+    - Added `--nobrowser` argument
 Version 1.0.3 [22-10-2019]
     - Show extension browser name in scan info (issue #4)
     - Fixed a bug that created error when user is offline
