--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+Version 1.0.5 []
+    - Fixed Chrome Webstore downloader (issue #13)
 Version 1.0.4 [14-05-2020]
     - Fixed an error where local firefox extensions could not be detected (issue #9)
     - Added support for Brave browser
